# motorControl

./: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.json  library.properties
arduino/: README.md
cmake/: motor_controlConfig.cmake.in
examples/: README.md
examples/MotorControlDemo/: MotorControlDemo.ino  MotorControlDemo_pico.cpp
src/: current_loop_controller.cpp  hg7881_motor_driver.cpp  motor_control.hpp  position_current_cascade.cpp  vnh7070as_motor_driver.cpp
src/motor_control/: current_loop_controller.hpp  current_sensor.hpp  dc_brushed_motor.hpp  hg7881_bridge_pins.hpp  hg7881_motor_driver.hpp  motor_control.hpp  motor_pwm_driver.hpp  position_current_cascade.hpp  position_sensor.hpp  vnh7070as_bridge_pins.hpp  vnh7070as_motor_driver.hpp
